# IECore

./: .gitignore  .gitmodules  CMakeLists.txt  IEAsync.h  IEConcurrency.h  IECore.cpp  IECore.h  IECoreMinimal.h  IERenderer.cpp  IERenderer.h  IEUtils.cpp  IEUtils.h  LICENSE  README.md  io.github.ie.IECore.yaml
Examples/: CMakeLists.txt  CmakeLists.txt  main.cpp
Extensions/: ie.imgui.cpp  ie.imgui.h
Implementation/: IEApple.mm  IELinux.cpp  IEWin32.cpp
Resources/IE-Brand-Kit/: IE-Logo-NoBg-512.icns
Source/: IECommon.cpp  IECoreMinimal.cpp  IECoreMinimal.h  IERenderer.cpp  IERenderer.h  IEUtils.cpp  IEUtils.h
